# firmware-lab

./: README.md  pyproject.toml
src/firmware_lab/: cli.py  common.py  qemu_runner.py  qmp.py  renode_runner.py
src/firmware_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
templates/qemu/: example_qemu_args.md
